# financial-lens

./: .env  .gitignore  README.md  dev.docker-compose copy.yaml  dev.docker-compose.yaml  docker-compose.yaml
.github/workflows/: sample.yml  test-build-deploy.yml  unit-test-on-push-pr.yml
backend/: Dockerfile  app.py  configs.yaml  pyproject.toml  requirements.txt  start.sh  test.db-journal
backend/dao/: __init__.py  acct.py  connection.py  entity.py  fx.py  invoice.py  orm.py  transaction.py
backend/legacy/: app.py
backend/legacy/dao/: acct.py  connection.py  (+5 more)
backend/model/: accounts.py  entity.py  invoice.py  transactions.py
backend/service/: __init__.py  acct_manager.py  entity_manager.py  fx_manager.py  invoice_manager.py  record_transaction.py  transaction_manager.py
backend/src/: app.py
backend/test/: conftest.py  test_model.py  test_random.py
backend/utils/: exceptions.py  tools.py
configs/setups/: mysql_setup.sql
depend_services/: dependency.docker-compose.yaml
frontend/: Dockerfile  app.py  pyproject.toml  requirements.txt
frontend/sections/: acct_flows.py  balance_sheet.py  chart.py  chart_of_accounts.py  contact.py  customer.py  db_management.py  dividend.py  expense.py  expense_overview.py  income_statement.py  issue.py  item.py  journal.py  login.py  property.py  property_trans.py  purchase_invoice.py  purchase_overview.py  purchase_payment.py  repurchase.py  sales.py  sales_invoice.py  sales_overview.py  sales_payment.py  settings.py  supplier.py  test_api.py
frontend/utils/: apis.py  base.py  enums.py  exceptions.py  tools.py
(+140 files in other folders)
