[project]
name = "frontend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "bidict==0.23.1",
    "extra-streamlit-components==0.1.80",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pydantic==2.10.6",
    "requests==2.32.3",
    "streamlit==1.46.0",
    "streamlit-nested-layout==0.1.4",
    "streamlit-shadcn-ui==0.1.18",
    "xlsxwriter==3.2.5",
]
